[package]
name = "project1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rand = "0.8" 
serde = "1.0.200"
petgraph = "0.5.1"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"